JL-85 Использование jQuery

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "ikom9120 <ikom9120@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "jQuery": "^1.7.4",
     "sweetalert2": "^10.3.5"
   }
 }
